fixing this horizontal overflow took more out of my brainpower than it should have

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,11 @@
 body,root{
-    margin:0;
+    margin: 0;
     padding: 0;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 body{
-    width: 100vw;
     /* overflow-x: hidden; */
     font-family: Lora;
 }
